--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ldowers/Bamazon#readme",
   "dependencies": {
+    "inquirer": "^2.0.0",
     "mysql": "^2.12.0",
     "prompt": "^1.0.0"
   }
